--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       build_type:
-        description: 'Art des Builds'
+        description: 'Type of build'
         required: true
         default: 'full'
         type: choice
@@ -50,7 +50,6 @@ jobs:
           echo "versionNumberMac=$MAC_VERSION" >> $GITHUB_OUTPUT
 
   build-portable:
-    if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
     needs: read_versions
     runs-on: ubuntu-latest
     strategy:
@@ -70,27 +69,32 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Set up JDK 21
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
         uses: actions/setup-java@7a6d8a8234af8eb26422e24e3006232cccaa061b # v4.6.0
         with:
           java-version: "21"
           distribution: "temurin"
 
       - uses: gradle/actions/setup-gradle@0bdd871935719febd78681f197cd39af5b6e16a6 # v4.2.2
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
         with:
           gradle-version: 8.12
 
       - name: Generate jar (With Security=${{ matrix.enable_security }})
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
         run: ./gradlew clean createExe
         env:
           DOCKER_ENABLE_SECURITY: ${{ matrix.enable_security }}
           STIRLING_PDF_DESKTOP_UI: false
 
       - name: Rename binaries
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
         run: |
           mv ./build/launch4j/Stirling-PDF.exe ./win-Stirling-PDF-portable-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
           mv ./build/libs/Stirling-PDF-${{ needs.read_versions.outputs.version }}.jar ./Stirling-PDF-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.jar
 
       - name: Upload build artifacts
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           retention-days: 1
@@ -101,7 +105,6 @@ jobs:
             ./Stirling-PDF-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.jar
 
   sign_verify-portable:
-    if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
     needs: [build-portable, read_versions]
     runs-on: ubuntu-latest
     strategy:
@@ -119,11 +122,13 @@ jobs:
           egress-policy: audit
 
       - name: Download build artifacts
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           name: stirling-${{ matrix.file_suffix }}binaries
 
       - name: Display structure of downloaded files
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
         run: ls -R
 
       # - name: Install Cosign
@@ -153,6 +158,7 @@ jobs:
       #       ./win-Stirling-PDF-portable-Server-${{ matrix.file_suffix }}${{ needs.read_versions.outputs.version }}.exe
 
       - name: Upload signed artifacts
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'portable'
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           retention-days: 1
@@ -163,7 +169,6 @@ jobs:
             !cosign.*
 
   build-installers:
-    if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
     needs: read_versions
     strategy:
       matrix:
@@ -192,24 +197,27 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Set up JDK 21
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
         uses: actions/setup-java@7a6d8a8234af8eb26422e24e3006232cccaa061b # v4.6.0
         with:
           java-version: "21"
           distribution: "temurin"
 
       - uses: gradle/actions/setup-gradle@0bdd871935719febd78681f197cd39af5b6e16a6 # v4.2.2
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
         with:
           gradle-version: 8.12
 
       # Install Windows dependencies
       - name: Install WiX Toolset
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-latest' && (github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer')
         run: |
           curl -L -o wix.exe https://github.com/wixtoolset/wix3/releases/download/wix3141rtm/wix314.exe
           .\wix.exe /install /quiet
 
       # # Build installer
       - name: Build Installer
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
         run: ./gradlew build jpackage -x test --info
         env:
           DOCKER_ENABLE_SECURITY: false
@@ -217,6 +225,7 @@ jobs:
 
       # Rename and collect artifacts based on OS
       - name: Prepare artifacts
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
         id: prepare
         shell: bash
         run: |
@@ -229,6 +238,7 @@ jobs:
           fi
 
       - name: Upload build artifacts
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           retention-days: 1
@@ -238,7 +248,6 @@ jobs:
             ./${{ matrix.platform }}Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}
 
   sign_verify:
-    if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
     needs: [read_versions, build-installers]
     strategy:
       matrix:
@@ -263,23 +272,25 @@ jobs:
           egress-policy: audit
 
       - name: Download build artifacts
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           name: ${{ matrix.platform }}binaries
 
       - name: Display structure of downloaded files
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
         run: ls -R
 
       - name: Install Cosign
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-latest' && (github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer')
         uses: sigstore/cosign-installer@dc72c7d5c4d10cd6bcb8cf6e3fd625a9e5e537da # v3.7.0
 
       - name: Generate key pair
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-latest' && (github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer')
         run: cosign generate-key-pair
 
       - name: Sign and generate attestations
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-latest' && (github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer')
         run: |
           cosign sign-blob \
             --key ./cosign.key \
@@ -300,6 +311,7 @@ jobs:
             ./${{ matrix.platform }}Stirling-PDF${{ matrix.extra }}-${{ needs.read_versions.outputs.version }}.${{ matrix.ext }}
 
       - name: Upload signed artifacts
+        if: github.event.inputs.build_type == 'full' || github.event.inputs.build_type == 'installer'
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           retention-days: 1
