--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -40,7 +40,6 @@ jobs:
           echo "ID: ${{ steps.get-user-id.outputs.user-id }}"
           echo "string=${{ steps.generate-token.outputs.app-slug }}[bot] <${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com>"  >> "$GITHUB_OUTPUT"
       - run: echo "committer string is ${{ steps.committer.outputs.string }}"
-
       - name: Check out code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
@@ -56,7 +55,7 @@ jobs:
         run: |
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies --dry-run help
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies --dry-run help
-          mv gradle/verification-metadata.dryrun.xml gradle/verification-metadata.xml
+          mv -f gradle/verification-metadata.dryrun.xml gradle/verification-metadata.xml
 
       - name: Run Gradle Command
         run: ./gradlew clean generateLicenseReport
