--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -77,7 +77,7 @@ jobs:
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
           python-version: "3.12"
-          cache: 'pip' # caching pip dependencies
+          cache: "pip" # caching pip dependencies
 
       - name: Sync translation property files
         run: |
@@ -109,7 +109,7 @@ jobs:
         run: |
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies --dry-run help
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies --dry-run help
-          mv gradle/verification-metadata.dryrun.xml gradle/verification-metadata.xml
+          mv -f gradle/verification-metadata.dryrun.xml gradle/verification-metadata.xml
           ./gradlew clean build
 
       - name: Run git add
