--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,10 +41,15 @@ jobs:
       - name: PR | Generate verification metadata with signatures and checksums for dependabot[bot]
         if: github.event.pull_request.user.login == 'dependabot[bot]'
         run: |
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies --dry-run help
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies --dry-run help
-          mv -f gradle/verification-metadata.dryrun.xml gradle/verification-metadata.xml
-          mv -f gradle/verification-keyring.dryrun.keys gradle/verification-keyring.keys
+          set -e
+          if [ -f ./gradle/verification-metadata.xml ]; then
+            rm ./gradle/verification-metadata.xml
+          fi
+          if [ -f ./gradle/verification-keyring.keys ]; then
+            rm ./gradle/verification-keyring.keys
+          fi
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies help
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies help
 
       - name: Build with Gradle and no spring security
         id: build_without_security
