--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -53,10 +53,15 @@ jobs:
 
       - name: Generate verification metadata with signatures and checksums
         run: |
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies --dry-run help
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies --dry-run help
-          mv -f gradle/verification-metadata.dryrun.xml gradle/verification-metadata.xml
-          mv -f gradle/verification-keyring.dryrun.keys gradle/verification-keyring.keys
+          set -e
+          if [ -f ./gradle/verification-metadata.xml ]; then
+            rm ./gradle/verification-metadata.xml
+          fi
+          if [ -f ./gradle/verification-keyring.keys ]; then
+            rm ./gradle/verification-keyring.keys
+          fi
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies help
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies help
 
       - name: Run Gradle Command
         run: ./gradlew clean generateLicenseReport
