--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -111,7 +111,7 @@ jobs:
           if [ -f ./gradle/verification-metadata.xml ]; then
             rm ./gradle/verification-metadata.xml
           fi
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies help
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 help
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies help
           ./gradlew clean build
 
