--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,16 +47,16 @@ jobs:
       - name: Build with Gradle and no spring security
         id: build_without_security
         run: |
-          ./gradlew clean build 2> >(tee gradle-error.log >&2) || echo $? > gradle-exit-code-false.txt
+          ./gradlew clean build 2> >(tee gradle-error-${{ matrix.jdk-version }}-false.log >&2) || echo $? > gradle-exit-code-false.txt
         env:
           DOCKER_ENABLE_SECURITY: false
 
       - name: Check Gradle Build Exit Code (no spring security)
         if: ${{ always() && steps.build_without_security.conclusion }}
         run: |
-          cat gradle-error.log
+          cat gradle-error-${{ matrix.jdk-version }}-false.log
           if [ -f gradle-exit-code-false.txt ]; then
-            error_output=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
+            error_output=$(cat gradle-error-${{ matrix.jdk-version }}-false.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
             if echo $error_output | grep -q 'dependency-verification-report.html'; then
               echo "schreib einen Kommentar"
             fi
@@ -88,16 +88,16 @@ jobs:
       - name: Build with Gradle and with spring security
         id: build_with_security
         run: |
-          ./gradlew clean build 2> >(tee gradle-error.log >&2) || echo $? > gradle-exit-code-true.txt
+          ./gradlew clean build 2> >(tee gradle-error-${{ matrix.jdk-version }}-true.log >&2) || echo $? > gradle-exit-code-true.txt
         env:
           DOCKER_ENABLE_SECURITY: true
 
       - name: Check Gradle Build Exit Code
         if: ${{ always() && steps.build_with_security.conclusion }}
         run: |
-          cat gradle-error.log
+          cat gradle-error-${{ matrix.jdk-version }}-true.log
           if [ -f gradle-exit-code-true.txt ]; then
-            error_output=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
+            error_output=$(cat gradle-error-${{ matrix.jdk-version }}-true.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
             if echo $error_output | grep -q 'dependency-verification-report.html'; then
               echo "schreib einen Kommentar"
             fi
@@ -119,18 +119,6 @@ jobs:
             exit ${exit_code:-1}
           fi
 
-      # - name: Check Gradle Build Status DOCKER_ENABLE_SECURITY - true
-      #   run: |
-      #     if [ -f gradle-exit-code-true.txt ] && [ -s gradle-exit-code-true.txt ]; then
-      #       # Lesen Sie den Fehlercode und die Fehlerausgabe
-      #       error_output_true=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
-      #       cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
-      #       # Erstellen Sie eine Ausgabe für den nächsten Schritt
-      #       echo "error_output_true=$error_output_true" >> $GITHUB_ENV
-      #     else
-      #       echo "error_output_true=" >> $GITHUB_ENV
-      #     fi
-
       - name: failure
         if: ${{ always() && steps.build_with_security.conclusion }}
         run: |
@@ -138,31 +126,43 @@ jobs:
             echo ${{ steps.build_with_security.conclusion  }}
           fi
 
-      # - name: Check Dependency Verfication error
-      #   if: env.error_output_false || env.error_output_true
-      #   run: |
-      #     if echo "${{ env.error_output_false }}" | grep -q 'dependency-verification-report.html' || \
-      #       echo "${{ env.error_output_true }}" | grep -q 'dependency-verification-report.html'; then
-      #       echo "FAIL_JOB=true" >> $GITHUB_ENV
-      #     elif [ -n "${{ env.error_output_false }}" ] || [ -n "${{ env.error_output_true }}" ]; then
-      #       cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
-      #       echo "FAIL=true" >> $GITHUB_ENV
-      #     else
-      #       echo "FAIL_JOB=false" >> $GITHUB_ENV
-      #       echo "FAIL=false" >> $GITHUB_ENV
-      #     fi
-
       - name: Upload Test Reports
         if: always()
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           name: test-reports-jdk-${{ matrix.jdk-version }}
           path: |
-            gradle-error.log
+            gradle-error-${{ matrix.jdk-version }}-true.log
+            gradle-error-${{ matrix.jdk-version }}-false.log
             build/reports/tests/
             build/test-results/
             build/reports/problems/
           retention-days: 3
+
+  write-comment:
+    runs-on: ubuntu-latest
+    needs: [build]
+    permissions:
+      pull-requests: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        jdk-version: [17] # , 21]
+
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@cb605e52c26070c328afc4562f0b4ada7618a84e # v2.10.4
+        with:
+          egress-policy: audit
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: test-reports-jdk-${{ matrix.jdk-version }}
+
+      - run: |
+          cat gradle-error-${{ matrix.jdk-version }}-true.log
 
       # - name: PR | Post comment
       #   if: env.FAIL_JOB == 'true' && github.event_name == 'pull_request'
