--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,14 +69,14 @@ jobs:
             echo "error_output_false=" >> $GITHUB_ENV
           fi
 
-      - name: Failure Handling (no spring security)
-        # if: ${{ env.exit_code_false != '0' }}
-        run: |
-          echo "The Gradle build step failed with exit code ${{ env.exit_code_false }}"
-          if echo "${{ env.error_output_false }}"; then
-            exit_code=${{ env.exit_code_false }}
-            exit ${exit_code:-1}
-          fi
+      # - name: Failure Handling (no spring security)
+      #   # if: ${{ env.exit_code_false != '0' }}
+      #   run: |
+      #     echo "The Gradle build step failed with exit code ${{ env.exit_code_false }}"
+      #     if echo "${{ env.error_output_false }}"; then
+      #       exit_code=${{ env.exit_code_false }}
+      #       exit ${exit_code:-1}
+      #     fi
 
       - name: failure
         if: ${{ always() && steps.build_without_security.conclusion }}
@@ -110,14 +110,14 @@ jobs:
             echo "error_output_true=" >> $GITHUB_ENV
           fi
 
-      - name: Failure Handling
-        if: ${{ env.exit_code_true != '0' }}
-        run: |
-          echo "The Gradle build step failed with exit code ${{ env.exit_code_true }}"
-          if echo "${{ env.error_output_true }}"; then
-            exit_code=${{ env.exit_code_true }}
-            exit ${exit_code:-1}
-          fi
+      # - name: Failure Handling
+      #   if: ${{ env.exit_code_true != '0' }}
+      #   run: |
+      #     echo "The Gradle build step failed with exit code ${{ env.exit_code_true }}"
+      #     if echo "${{ env.error_output_true }}"; then
+      #       exit_code=${{ env.exit_code_true }}
+      #       exit ${exit_code:-1}
+      #     fi
 
       - name: failure
         if: ${{ always() && steps.build_with_security.conclusion }}
