--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,33 +61,19 @@ jobs:
             exit_code=$(cat gradle-exit-code-${{ matrix.jdk-version }}-false.txt)
             exit ${exit_code:-1}
           fi
-          # cat gradle-error-${{ matrix.jdk-version }}-false.log
-          # if [ -f gradle-exit-code-${{ matrix.jdk-version }}-false.txt ]; then
-          #   error_output=$(cat gradle-error-${{ matrix.jdk-version }}-false.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
-          #   if echo $error_output | grep -q 'dependency-verification-report.html'; then
-          #     echo "schreib einen Kommentar"
-          #   fi
-          #   exit_code=$(cat gradle-exit-code-${{ matrix.jdk-version }}-false.txt)
-          #   echo "The Gradle build failed with exit code $exit_code"
-          #   echo "exit_code_false=$exit_code" >> $GITHUB_ENV
-          #   echo "error_output_false=$error_output" >> $GITHUB_ENV
-          # else
-          #   echo "exit_code_false=0" >> $GITHUB_ENV
-          #   echo "error_output_false=" >> $GITHUB_ENV
-          # fi
 
       - name: failure
         if: ${{ always() && steps.build_without_security_exit_code.conclusion == 'failure' }}
         run: |
           if echo "${{ env.error_output_false }}" | grep -q 'dependency-verification-report.html'; then
-            echo "write_comment=true"
-            echo "write_comment=true" >> $GITHUB_ENV
+            echo "write_comment_without_security=true"
+            echo "write_comment_without_security=true" >> $GITHUB_ENV
           else
-            echo "write_comment=false"
-            echo "write_comment=false" >> $GITHUB_ENV
+            echo "write_comment_without_security=false"
+            echo "write_comment_without_security=false" >> $GITHUB_ENV
           fi
       - name: PR | Post comment
-        if: ${{ always() && github.event_name == 'pull_request' && steps.build_without_security_exit_code.conclusion == 'failure' && env.write_comment == 'true' }}
+        if: ${{ always() && github.event_name == 'pull_request' && steps.build_without_security_exit_code.conclusion == 'failure' && env.write_comment_without_security == 'true' }}
         run: |
           echo ${{ steps.build_without_security_exit_code.conclusion }}
       #   uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
@@ -162,30 +148,31 @@ jobs:
         env:
           DOCKER_ENABLE_SECURITY: true
 
-      - name: Check Gradle Build Exit Code
+      - name: Check Gradle Build Exit Code (no spring security)
         if: ${{ always() && steps.build_with_security.conclusion }}
+        id: build_with_security_exit_code
         run: |
-          cat gradle-error-${{ matrix.jdk-version }}-true.log
-          if [ -f gradle-exit-code-${{ matrix.jdk-version }}-true.txt ]; then
-            error_output=$(cat gradle-error-${{ matrix.jdk-version }}-true.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
-            if echo $error_output | grep -q 'dependency-verification-report.html'; then
-              echo "schreib einen Kommentar"
-            fi
-            exit_code=$(cat gradle-exit-code-${{ matrix.jdk-version }}-true.txt)
-            echo "The Gradle build failed with exit code $exit_code"
-            echo "exit_code_true=$exit_code" >> $GITHUB_ENV
-            echo "error_output_true=$error_output" >> $GITHUB_ENV
-          else
-            echo "exit_code_true=0" >> $GITHUB_ENV
-            echo "error_output_true=" >> $GITHUB_ENV
+          if [ -f gradle-exit-code-${{ matrix.jdk-version }}-false.txt ]; then
+            error_output=$(cat gradle-error-${{ matrix.jdk-version }}-false.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
+            echo "error_output_false=$error_output" >> $GITHUB_ENV
+            exit_code=$(cat gradle-exit-code-${{ matrix.jdk-version }}-false.txt)
+            exit ${exit_code:-1}
           fi
 
       - name: failure
-        if: ${{ always() && steps.build_with_security.conclusion }}
+        if: ${{ always() && steps.build_with_security_exit_code.conclusion == 'failure' }}
         run: |
-          if echo "${{ env.error_output_true }}" | grep -q 'dependency-verification-report.html'; then
-            echo ${{ steps.build_with_security.conclusion  }}
+          if echo "${{ env.error_output_false }}" | grep -q 'dependency-verification-report.html'; then
+            echo "write_comment_with_security=true"
+            echo "write_comment_with_security=true" >> $GITHUB_ENV
+          else
+            echo "write_comment_with_security=false"
+            echo "write_comment_with_security=false" >> $GITHUB_ENV
           fi
+      - name: PR | Post comment
+        if: ${{ always() && github.event_name == 'pull_request' && steps.build_with_security_exit_code.conclusion == 'failure' && env.write_comment_with_security == 'true' }}
+        run: |
+          echo ${{ steps.bbuild_with_security_exit_code.conclusion }}
 
       - name: Upload Test Reports
         if: always()
