--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
         id: build_with_security_exit_code
         run: |
           if [ -f gradle-exit-code-${{ matrix.jdk-version }}-true.txt ]; then
-            error_output=$(cat gradle-error-${{ matrix.jdk-version }}-true.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
+            error_output=$(cat gradle-error-${{ matrix.jdk-version }}-true.log 2>/dev/null | tr -d '\r' || echo "No error output captured.")
             echo "error_output_true=$error_output" >> $GITHUB_ENV
             exit_code=$(cat gradle-exit-code-${{ matrix.jdk-version }}-true.txt)
             exit ${exit_code:-1}
@@ -126,12 +126,12 @@ jobs:
             let bodyComment = "🚨 **Gradle Build Failed** 🚨\n\n";
 
             if (process.env.error_output_true) {
-              bodyComment += "### Build with Spring Security:\n";
+              bodyComment += "### Build with Spring Security:\n\n";
               bodyComment += "```\n" + process.env.error_output_true + "\n```\n\n";
             }
 
             if (process.env.error_output_false) {
-              bodyComment += "### Build without Spring Security:\n";
+              bodyComment += "### Build without Spring Security:\n\n";
               bodyComment += "```\n" + process.env.error_output_false + "\n```\n\n";
             }
 
