--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,32 +110,6 @@ jobs:
             echo "write_comment_with_security=false" >> $GITHUB_ENV
           fi
 
-      - name: Collect all error outputs
-        if: always()
-        run: |
-          # Prepare combined logs for all JDK versions
-          echo "combined_error_logs<<EOF" >> $GITHUB_ENV
-
-          for jdk_version in 17 21; do
-            if [ -f gradle-error-${jdk_version}-true.log ]; then
-              echo "### Build with Spring Security (Java $jdk_version):" >> $GITHUB_ENV
-              echo "\n" >> $GITHUB_ENV
-              echo "Dependency verification failed" >> $GITHUB_ENV
-              echo "\n" >> $GITHUB_ENV
-              echo "" >> $GITHUB_ENV
-            fi
-
-            if [ -f gradle-error-${jdk_version}-false.log ]; then
-              echo "### Build without Spring Security (Java $jdk_version):" >> $GITHUB_ENV
-              echo "\n" >> $GITHUB_ENV
-              echo "Dependency verification failed" >> $GITHUB_ENV
-              echo "\n" >> $GITHUB_ENV
-              echo "" >> $GITHUB_ENV
-            fi
-          done
-
-          echo "EOF" >> $GITHUB_ENV
-
       - name: PR | Delete comment
         if: ${{ always() && github.event_name == 'pull_request' && ((steps.build_with_security_exit_code.conclusion == 'failure' && env.write_comment_with_security == 'true') || (steps.build_without_security_exit_code.conclusion == 'failure' && env.write_comment_without_security == 'true')) }}
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
@@ -191,17 +165,7 @@ jobs:
             // Build the comment content
             let bodyComment = "🚨 **Gradle Build Failed** 🚨\n\n";
             bodyComment +=  "```bash\n./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies help\n" +
-                            "./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies help\n```";
-
-            // if (process.env.error_output_true) {
-            //   bodyComment += "### Build with Spring Security:\n\n";
-            //   bodyComment += "```\n" + error_output_true.trim() + "\n```\n\n";
-            // }
-
-            // if (process.env.error_output_false) {
-            //   bodyComment += "### Build without Spring Security:\n\n";
-            //   bodyComment += "```\n" + error_output_false.trim() + "\n```\n\n";
-            // }
+                            "./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies help\n```\n\n";
 
             bodyComment += "For more details, refer to the [Dependency Management Guide](https://github.com/Stirling-Tools/Stirling-PDF/blob/main/DeveloperGuide.md#managing-dependencies).\n";
 
@@ -214,23 +178,6 @@ jobs:
                 body: bodyComment
               });
               console.log("Created new comment.");
-            // } else if (comment && comment.user.login === expectedActor && (process.env.error_output_true || process.env.error_output_false)) {
-            //   // Update existing comment
-            //   await github.rest.issues.updateComment({
-            //     owner: repoOwner,
-            //     repo: repoName,
-            //     comment_id: comment.id,
-            //     body: bodyComment
-            //   });
-            //   console.log("Updated existing comment.");
-            // } else if (comment && comment.user.login === expectedActor) {
-            //   // deleted existing comment
-            //   await github.rest.issues.deleteComment({
-            //     owner: repoOwner,
-            //     repo: repoName,
-            //     comment_id: comment.id
-            //   });
-            //   console.log("Deleted existing comment.");
             } else {
               console.log("Comment update attempt denied. Actor does not match.");
             }
@@ -247,117 +194,6 @@ jobs:
             build/test-results/
             build/reports/problems/
           retention-days: 3
-
-  write-comment:
-    runs-on: ubuntu-latest
-    needs: [build]
-    permissions:
-      pull-requests: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - jdk-version: 17
-            docker_enable_security: true
-          - jdk-version: 17
-            docker_enable_security: false
-          # - jdk-version: 21
-          #   docker_enable_security: [true, false]
-
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@cb605e52c26070c328afc4562f0b4ada7618a84e # v2.10.4
-        with:
-          egress-policy: audit
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
-        with:
-          name: test-reports-jdk-${{ matrix.jdk-version }}
-
-      - id: error
-        run: |
-          if [ -f gradle-exit-code-${{ matrix.jdk-version }}-${{ matrix.docker_enable_security}}.txt ]; then
-            cat gradle-error-${{ matrix.jdk-version }}-${{ matrix.docker_enable_security}}.log
-            exit_code=$(cat gradle-exit-code-${{ matrix.jdk-version }}-${{ matrix.docker_enable_security}}.txt)
-            exit ${exit_code:-1}
-          fi
-
-      - name: PR | Post comment
-        if: ${{ always() && github.event_name == 'pull_request' && steps.error.conclusion }}
-        run: |
-          echo ${{ steps.error.conclusion }}
-      #   uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      #   with:
-      #     script: |
-      #       const { GITHUB_REPOSITORY, SCRIPT_OUTPUT } = process.env;
-      #       const [repoOwner, repoName] = GITHUB_REPOSITORY.split('/');
-      #       const prNumber = context.issue.number;
-
-      #       // Find existing comment
-      #       const comments = await github.rest.issues.listComments({
-      #         owner: repoOwner,
-      #         repo: repoName,
-      #         issue_number: prNumber
-      #       });
-
-      #       const comment = comments.data.find(c => c.body.includes("🚨 **Gradle Build Failed** 🚨"));
-
-      #       if (!comment) {
-      #         // Create new comment if no existing comment is found
-      #         await github.rest.issues.createComment({
-      #           owner: repoOwner,
-      #           repo: repoName,
-      #           issue_number: prNumber,
-      #           body: `🚨 **Gradle Build Failed** 🚨
-
-      #           Check: https://github.com/Stirling-Tools/Stirling-PDF/blob/main/DeveloperGuide.md#managing-dependencies
-      #           `
-      #         });
-      #         console.log("Created new comment.");
-      #       } else {
-      #         console.log("Comment update attempt denied. Actor does not match.");
-      #       }
-
-      # - name: PR | Delete comment
-      #   if: env.FAIL_JOB == 'false' && github.event_name == 'pull_request'
-      #   uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      #   with:
-      #     script: |
-      #       const { GITHUB_REPOSITORY, SCRIPT_OUTPUT } = process.env;
-      #       const [repoOwner, repoName] = GITHUB_REPOSITORY.split('/');
-      #       const prNumber = context.issue.number;
-
-      #       // Find existing comment
-      #       const comments = await github.rest.issues.listComments({
-      #         owner: repoOwner,
-      #         repo: repoName,
-      #         issue_number: prNumber
-      #       });
-
-      #       const comment = comments.data.find(c => c.body.includes("🚨 **Gradle Build Failed** 🚨"));
-
-      #       // Only allow the action user to update comments
-      #       const expectedActor = "github-actions[bot]";
-
-      #       if (comment && comment.user.login === expectedActor) {
-      #         // deleted existing comment
-      #         await github.rest.issues.deleteComment({
-      #           owner: repoOwner,
-      #           repo: repoName,
-      #           comment_id: comment.id
-      #         });
-      #         console.log("Deleted existing comment.");
-      #       } else {
-      #         console.log("Comment deleted attempt denied. Actor does not match.");
-      #       }
-
-      # - name: Fail job if errors found
-      #   if: env.FAIL_JOB == 'true' || env.FAIL == 'true'
-      #   run: |
-      #     echo "Failing the job because errors were detected."
-      #     exit 1
 
   docker-compose-tests:
     # if: github.event_name == 'push' && github.ref == 'refs/heads/main' ||
