--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -262,6 +262,6 @@ jobs:
 
       - name: Run Docker Compose Tests
         run: |
-          # chmod +x ./cucumber/test_webpages.sh
-          chmod +x ./test.sh
-          ./test.sh "${{ github.event.pull_request.user.login == 'dependabot[bot]' }}"
+          # chmod +x ./testing/test_webpages.sh
+          chmod +x ./testing/test.sh
+          ./testing/test.sh "${{ github.event.pull_request.user.login == 'dependabot[bot]' }}"
